# FreezeLibs

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_freezelibs.py
.github/workflows/: python-publish.yml
FreezeLibs/: __init__.py
tests/: test_freezelibs.py
